--- a/client/views/main.ejs
+++ b/client/views/main.ejs
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <head>
   <title>Dalmuti</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
+  <div id="d_result" class="result"></div>
+  <div id="d_floor" class="floor"></div>
+  <div id="d_other" class="other"></div>
+  <div id="d_my" class="my"></div>
 </body>
 </html>
 <script type="text/javascript" src="js/jquery.min.js"></script>
