--- a/client/views/main.ejs
+++ b/client/views/main.ejs
@@ -11,4 +11,5 @@
 </body>
 </html>
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/underscore.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
