--- a/client/res/css/main.css
+++ b/client/res/css/main.css
@@ -1,8 +1,19 @@
 body{ margin:0;overflow:hidden;font-size:10.5pt; }
-.btn{ width:3em;height:3em;padding:0;border:1px solid #ccc;border-radius:5px;background-color:black;cursor:pointer;outline:0;color:white }
-.result{ position:relative;float:left;width:15em;height:5em;top:3em;left:3em;border:2px solid #e1e1e1; }
-.floor{ clear:both;position:relative;float:left;width:15em;height:5em;top:5em;left:3em;border:2px solid #e1e1e1; }
-.my{ position:fixed;bottom:0;width:100%;height:20em;text-align:center;overflow:auto; }
+button, input{background-color:transparent;outline:0}
+.connect{ display:none;position:fixed;top:0;width:100%;height:100%; }
+.connect .box{ position:relative;float:left;left:42%;margin:0 5em 0 -2em; } 
+.connect .box .title{ font-size:20pt;color:#FF5E00;font-family:'Kaushan Script'; } 
+.connect .box .name{ position:relative;float:left; } 
+.connect .box .name input{ width:10em;height:2em;padding:6px 5px;border-top:0;border-left:0;border-right:0;border-bottom:3px solid black; } 
+.connect .box .name input::-webkit-input-placeholder{color:black;}
+.connect .box .name .btn{ margin-top:1em;width:10em;height:3em;cursor:pointer;border:0;background-color:#DB0000;color:white } 
+.connect .box li{} 
+
+.game{ display:none; }
+.btn{ width:3em;height:3em;padding:0;border:1px solid black;border-radius:5px;cursor:pointer;outline:0; }
+.result{ position:relative;float:left;top:3em;left:3em;border:2px solid #e1e1e1;padding:5px 10px; }
+.floor{ clear:both;position:relative;float:left;top:5em;left:3em;border:2px solid #e1e1e1;padding:10px 10px; }
+.my{ position:fixed;bottom:0;width:100%;height:30em;text-align:center;overflow:auto; }
 .my .card{ position:relative;float:left;width:5em;height:5em;border:1px solid #e1e1e1;cursor:pointer; }
 .my .card-up{ position:relative;float:left;width:5em;height:5em;background-color:#980000;border:1px solid #e1e1e1;cursor:pointer; }
-.my button{ clear:both; }
+.my button{ clear:both;padding:5px 5px;margin:0.5em; }
