--- a/client/res/css/main.css
+++ b/client/res/css/main.css
@@ -14,6 +14,8 @@ button, input{background-color:transparent;outline:0}
 .result{ position:relative;float:left;top:3em;left:3em;border:2px solid #e1e1e1;padding:5px 10px; }
 .floor{ clear:both;position:relative;float:left;top:5em;left:3em;border:2px solid #e1e1e1;padding:10px 10px; }
 .my{ position:fixed;bottom:0;width:100%;height:30em;text-align:center;overflow:auto; }
-.my .card{ position:relative;float:left;width:5em;height:5em;border:1px solid #e1e1e1;cursor:pointer; }
-.my .card-up{ position:relative;float:left;width:5em;height:5em;background-color:#980000;border:1px solid #e1e1e1;cursor:pointer; }
+.my .card{ position:relative;float:left;width:8em;height:5em;border:1px solid #e1e1e1;cursor:pointer; }
+.my .card img{ width:8em;height:5em; }
+.my .card-up{ position:relative;float:left;width:8em;height:5em;background-color:#980000;border:1px solid #e1e1e1;cursor:pointer; }
+.my .card-up img{ display:none; }
 .my button{ clear:both;padding:5px 5px;margin:0.5em; }
