--- a/client/views/main.ejs
+++ b/client/views/main.ejs
@@ -16,6 +16,8 @@
       </p>
     </div>
     <div class="box">
+      <p class="title"><b><small>필요 인원</small></b></p>
+      <p><span id="s_need_user"></span></p>
       <p class="title"><b><small>접속 유저</small></b></p>
       <p>
         <ul id="u_connect_user"></ul>
