--- a/client/views/main.ejs
+++ b/client/views/main.ejs
@@ -28,8 +28,13 @@
     <div id="d_result" class="result">
 <pre></pre>
     </div>
+    <div id="d_users" class="result">
+<pre></pre>
+    </div>
+    <div id="d_winner" class="result">
+<pre></pre>
+    </div>
     <div id="d_floor" class="floor"></div>
-    <div id="d_other" class="other"></div>
     <div id="d_my" class="my"></div>
   </div>
 </body>
