--- a/client/res/css/main.css
+++ b/client/res/css/main.css
@@ -9,13 +9,15 @@ button, input{background-color:transparent;outline:0}
 .connect .box .name .btn{ margin-top:1em;width:10em;height:3em;cursor:pointer;border:0;background-color:#DB0000;color:white } 
 .connect .box li{} 
 
+.btn{ width:7em;height:3em;padding:0;border:1px solid black;border-radius:5px;cursor:pointer;outline:0;background-color:black;color:white; }
 .game{ display:none; }
-.btn{ width:3em;height:3em;padding:0;border:1px solid black;border-radius:5px;cursor:pointer;outline:0; }
-.result{ position:relative;float:left;top:3em;left:3em;border:2px solid #e1e1e1;padding:5px 10px; }
+.result{ clear:both;position:relative;float:left;top:3em;margin-top:1em;left:3em;border:2px solid #e1e1e1;padding:5px 10px; }
 .floor{ clear:both;position:relative;float:left;top:5em;left:3em;border:2px solid #e1e1e1;padding:10px 10px; }
-.my{ position:fixed;bottom:0;width:100%;height:40em;text-align:center;overflow:auto; }
-.my .card{ position:relative;float:left;width:15em;height:15em;border:1px solid #e1e1e1;cursor:pointer; }
-.my .card img{ width:15em;height:15em; }
-.my .card-up{ position:relative;float:left;width:15em;height:15em;background-color:#980000;border:1px solid #e1e1e1;cursor:pointer; }
-.my .card-up img{ display:none; }
+.my{ position:fixed;left:35em;width:calc(100% - 36em);height:calc(100% - 0.1em);text-align:center;overflow:auto; }
+.my .card{ position:relative;float:left;width:13em;height:13em;border:1px solid #e1e1e1;cursor:pointer;margin:0.1em; }
+.my .card-up{ position:relative;float:left;width:13em;height:13em;opacity:0.4;border:1px solid #e1e1e1;cursor:pointer; }
+.my img{ width:13em;height:13em; }
 .my button{ clear:both;padding:5px 5px;margin:0.5em; }
+.my .button{ clear:both;position:relative;float:left;margin:2em; }
+
+.text-red{ color:#FF5E00; }
