--- a/client/res/css/main.css
+++ b/client/res/css/main.css
@@ -16,7 +16,7 @@ nav span{ position:relative;float:left;top:0.3em;height:2em;color:#a1a1a1; }
 .connect .box .name .btn{ margin-top:1em;width:10em;height:3em;cursor:pointer;border:0;background-color:#DB0000;color:white } 
 .connect .desc{ clear:both;position:relative;float:left;width:40em;left:35%;margin:0 5em 0 -2em; } 
 
-.btn{ width:7em;height:3em;padding:0;border:1px solid black;border-radius:5px;cursor:pointer;outline:0; }
+.btn{ width:7em;height:3em;padding:0;border:1px solid #a1a1a1;border-radius:5px;cursor:pointer;outline:0; }
 .game{ display:none;position:relative;float:left;clear:both;margin-top:2em; }
 .result{ clear:both;position:relative;float:left;margin-bottom:1em;left:3em;border:2px solid #e1e1e1;padding:5px 10px; }
 .floor{ clear:both;position:relative;float:left;top:1em;left:3em;border:2px solid #e1e1e1;padding:10px 10px; }
@@ -28,3 +28,4 @@ nav span{ position:relative;float:left;top:0.3em;height:2em;color:#a1a1a1; }
 .my .button{ clear:both;position:relative;float:left;margin:2em; }
 
 .text-red{ color:#FF5E00; }
+.bg-orange{ background-color:#FF5E00;color:white;border:0; }
