마지막 승리 카드 bug fix, 채팅 추가

--- a/client/views/main.ejs
+++ b/client/views/main.ejs
@@ -18,6 +18,10 @@
       </div>
     </div> 
   </nav>
+  <div id="d_chat" class="chat">
+    <div id="d_msg" class="msg"></div>
+    <input id="i_chat_msg" type="text" placeholder="메세지" />
+  </div>
   <div id="d_connect" class="connect">
     <div class="box">
       <p class="title"><b>Dalmuti</b></p>
