--- a/client/res/css/main.css
+++ b/client/res/css/main.css
@@ -7,6 +7,9 @@ nav .setting .menu img{ position:relative;float:left;width:18px;height:18px;top:
 nav .setting .menu button{ width:7em;height:2em;border:0;cursor:pointer;outline:0; }
 nav input{ width:1em;height:2em;padding:2px 10px;border-top:0;border-left:0;border-right:0;border-bottom:3px solid black; } 
 nav span{ position:relative;float:left;top:0.3em;height:2em;color:#a1a1a1; } 
+.chat { display:none;clear:both;position:fixed;left:0.5em;bottom:1em;width:20em;z-index:999; }
+.chat .msg{ height:22em;border:1px solid #e1e1e1;overflow-y:auto;overflow-x:hidden; }
+.chat input{ width:19em;padding:10px 10px;border-top:0;border-left:0;border-right:0;border-bottom:1px solid #e1e1e1; }
 .connect{ display:none;position:fixed;margin-top:3em;width:100%;height:100%; }
 .connect .box{ position:relative;float:left;left:42%;margin:0 5em 0 -2em; } 
 .connect .box .title{ font-size:20pt;color:#FF5E00;font-family:'Kaushan Script'; } 
@@ -27,5 +30,6 @@ nav span{ position:relative;float:left;top:0.3em;height:2em;color:#a1a1a1; }
 .my button{ clear:both;padding:5px 5px;margin:0.5em; }
 .my .button{ clear:both;position:relative;float:left;margin:2em; }
 
+.float-right{ position:relative;float:right; }
 .text-red{ color:#FF5E00; }
 .bg-orange{ background-color:#FF5E00;color:white;border:0; }
