--- a/client/res/css/main.css
+++ b/client/res/css/main.css
@@ -1,6 +1,6 @@
 body{ margin:0;overflow:hidden;font-size:10.5pt; }
 button, input{background-color:transparent;outline:0}
-nav{ position:relative;float:left;top:1em;width:100%;height:3em; }
+nav{ display:none;position:relative;float:left;top:1em;width:100%;height:3em; }
 nav .setting { position:relative;float:right;margin:0 3em;z-index:99; }
 nav .setting .menu{ position:relative;float:left;margin:0 0.5em; }
 nav .setting .menu img{ position:relative;float:left;width:18px;height:18px;top:0.1em;border:0;cursor:pointer;outline:0; }
