--- a/client_new/res/css/style.css
+++ b/client_new/res/css/style.css
@@ -15,7 +15,16 @@ input[type=radio]{-600px:2px}
 #accessibility, .skip, hr, legend, caption{display:block;overflow:hidden;position:absolute;top:-1000em;left:0}
 button{padding:0;margin:0;border:0;background:0;line-height:normal;cursor:pointer;outline:none}
 
+nav{ display:none;position:absolute;top:1em;width:100%;height:3em; }
+nav .setting { position:relative;float:right;margin:0 3em;z-index:99; }
+nav .setting .menu{ position:relative;float:left;margin:0 0.5em; }
+nav .setting .menu img{ position:relative;float:left;width:18px;height:18px;top:0.1em;border:0;cursor:pointer;outline:0; }
+nav .setting .menu button{ width:7em;height:2em;border:0;cursor:pointer;outline:0;color:white; }
+nav input{ width:3em;height:2em;padding:2px 10px;border-top:0;border-left:0;border-right:0;border-bottom:3px solid black;outline:0;background-color:white;color:black; } 
+nav span{ position:relative;float:left;top:0.3em;height:2em;color:#a1a1a1; } 
+
 /* common */
+.clear_both{clear:both;}
 .card{display:inline-block;border-radius:5px;z-index:10}
 .card.move-slot{position:absolute !important;left:660px !important;bottom:415px !important}
 .card .wrap_card{position:relative;width:101px;height:160px;perspective:384px}
